fix: harden mail response parsing